@@ -172,7 +172,7 @@ import java.util.stream.Stream;
 	public Set<String> getRequiredMods() {
 		List<String> apisSupportedNames = ModAPIManager.getModAPIsForGenerator(
 						workspace.getGenerator().getGeneratorName()).stream().filter(ModAPI.Implementation::requiredWhenEnabled)
-				.map(e -> e.parent().id).collect(Collectors.toList());
+				.map(e -> e.parent().id).toList();
 
 		return Stream.concat(requiredMods.stream(), mcreatorDependencies.stream().filter(apisSupportedNames::contains))
 				.collect(Collectors.toSet());
@@ -181,7 +181,7 @@ import java.util.stream.Stream;
 	public Set<String> getDependencies() {
 		List<String> apisSupportedNames = ModAPIManager.getModAPIsForGenerator(
 						workspace.getGenerator().getGeneratorName()).stream().filter(e -> !e.requiredWhenEnabled())
-				.map(e -> e.parent().id).collect(Collectors.toList());
+				.map(e -> e.parent().id).toList();
 
 		return Stream.concat(dependencies.stream(), mcreatorDependencies.stream().filter(apisSupportedNames::contains))
 				.collect(Collectors.toSet());
@@ -193,8 +193,7 @@ import java.util.stream.Stream;
 
 	public Set<String> getMCreatorDependencies() {
 		List<String> apisSupportedNames = ModAPIManager.getModAPIsForGenerator(
-						workspace.getGenerator().getGeneratorName()).stream().map(e -> e.parent().id)
-				.collect(Collectors.toList());
+						workspace.getGenerator().getGeneratorName()).stream().map(e -> e.parent().id).toList();
 		return mcreatorDependencies.stream().filter(apisSupportedNames::contains).collect(Collectors.toSet());
 	}
 
